--- a/HotelManagement/appsettings.json
+++ b/HotelManagement/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AzureDbConnection": "Server=tcp:accountserver.database.windows.net,1433;Initial Catalog=HotelDB;Persist Security Info=False;User ID=toth1tamas718;Password=@Levente2016;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
